Just add the locales to the list